accessibility: fix violation: Element has insufficient color contrast of 3.91 (foreground color: #000000, background color: #0f6cbf, font size: 12.0pt (16px), font weight: normal). Expected contrast ratio of 4.5:1: #yui_3_18_1_1_1779109476176_45 > .form-check-label > .filterkeylabel (https://github.com/Wunderbyte-GmbH/Wunderbyte-GmbH/issues/1597)

--- a/styles.css
+++ b/styles.css
@@ -636,6 +636,12 @@
     word-break: break-all;
 }
 
+
+.wunderbyteTableFilter .dropdown-item:hover .form-check-label,
+.wunderbyteTableFilter .dropdown-item:focus .form-check-label {
+    color: #fff;
+}
+
 @media screen and (max-width: 991px) {
     .wunderbyte_table_filter_on .wunderbyte_table_container {
         display: block;
